feat: 동아리 검색 메서드 구현